# FoOOP_Course-2_Sem-2_Lab-1

./: .gitignore  CMakeLists.txt  README.md  main.cpp  pge_ui_elements.cpp  pge_ui_elements.h
assets/: parameters.txt
